-- create repositories -- start creating services

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,3 +3,4 @@ spring.jpa.hibernate.ddl-auto=update
 spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/mmirror?createDatabaseIfNotExist=true
 spring.datasource.username=root
 spring.datasource.password=
+closure.codeGenerationError="something went wrong while generationg your code, be  calm we are working on it."
