--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,4 +3,20 @@ spring.jpa.hibernate.ddl-auto=update
 spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/mmirror?createDatabaseIfNotExist=true
 spring.datasource.username=root
 spring.datasource.password=
+
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=anas.anas1998.tar@gmail.com
+spring.mail.password=Hks.Hks@Hkss
+
+# Other properties
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.connectiontimeout=5000
+spring.mail.properties.mail.smtp.timeout=5000
+spring.mail.properties.mail.smtp.writetimeout=5000
+
+# TLS , port 587
+spring.mail.properties.mail.smtp.starttls.enable=true
+
+
 closure.codeGenerationError="something went wrong while generationg your code, be  calm we are working on it."
