--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,7 +7,7 @@ spring.datasource.password=
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
 spring.mail.username=anas.anas1998.tar@gmail.com
-spring.mail.password=Hks.Hks@Hkss
+spring.mail.password=
 
 # Other properties
 spring.mail.properties.mail.smtp.auth=true
