-- add web app pages -- add view controller

--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -4,10 +4,10 @@ spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/mmirror?createDa
 spring.datasource.username=root
 spring.datasource.password=
 
-spring.mail.host=smtp.gmail.com
+spring.mail.host=mail.smart-mira.com
 spring.mail.port=587
-spring.mail.username=anas.anas1998.tar@gmail.com
-spring.mail.password=
+spring.mail.username=support@smart-mira.com
+spring.mail.password=P@ssw0rd123
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 
