--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -10,11 +10,11 @@ server:
 #     session:
 #       cookie:
 #         path: /techgeeknext
-  ssl:
-    key-store-password: techgeeknext123
-    key-store: classpath:securitykeystore.p12
-    key-store-type: PKCS12
-    key-alias: techgeeknext-alias
+  # ssl:
+  #   key-store-password: techgeeknext123
+  #   key-store: classpath:securitykeystore.p12
+  #   key-store-type: PKCS12
+  #   key-alias: techgeeknext-alias
 
 
 
@@ -32,7 +32,7 @@ spring:
   datasource:
     url: jdbc:mysql://${MYSQL_HOST:localhost}:3306/mmirror?createDatabaseIfNotExist=true
     username: root
-    password: 
+    password: P@ssw0rd 
   mail:
     host: mail.smart-mira.com
     port: 587
